--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<iframe src="https://www.baidu.com" width="100%" height="500px"></iframe>
+<iframe src="https://ficklelyh.atomgit.net/web/" width="100%" height="500px"></iframe>
 </body>
 
 </html>
