--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html lang="zh">
-
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS--</title>
-    
-    <link rel="stylesheet" href="use/www/www.css">
-    <meta name='description' content='迷你世界JSAPI 是一款由JavaScript编写的强大接口，旨在与迷你世界的Lua脚本环境无缝集成。这款接口提供了直观的功能输入框以及一系列跨域指令，让你能够轻松地在游戏中实现高级功能。'>
+    <title>Hello Haloer</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
-
 <body>
-<iframe src="https://ficklelyh.atomgit.net/web/" width="100%" height="500px"></iframe>
+    <iframe src="https://ficklelyh.atomgit.net/web/" frameborder="0"></iframe>
 </body>
-
 </html>
