--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 </head>
 <body>
     <iframe src="https://ficklelyh.atomgit.net/web/" frameborder="0"></iframe>
+    <p>Ficklelyh 是一位多才多艺的开发者，专注于多种编程语言和技术，包括 JavaScript、Lua 和 Python 等。他在前端开发方面有着丰富的经验，使用 JavaScript 构建了许多高质量的网页应用，并且对 HTML 也有深入的理解。此外，他还熟练掌握了 PHP，能够开发高效稳定的后端服务。 在游戏开发领域，Ficklelyh 对迷你世界的 Lua 脚本特别感兴趣，并且已经成功地为游戏添加了许多独特的功能。他也熟悉迷你世界的触发器系统，能够创建复杂的事件处理逻辑来增强游戏体验。 除了上述技能外，Ficklelyh 还具备 Python 爬虫开发的经验，能够从网站上抓取有用的数据进行分析或自动化任务。他还擅长电脑系统的安装与维护，包括重装操作系统和解决各种软件问题。 Ficklelyh 热衷于持续学习新技术，并乐于分享他的知识。他的空闲时间里，喜欢参与开源项目和社区讨论，不断提高自己的技能并帮助他人解决问题。 他的 GitHub 仓库包括： Ficklelyh/Ficktools - GitHub：一个包含多种工具的仓库。 Ficklelyh/ficklelyh.github.io - GitHub：他的个人GitHub页面，可能包含课堂笔记和其他学习资源。 他的个人导航页面也包含了许多有用的信息和链接，例如： JS个人导航页 - Ficklelyh -Haloer的学习笔记：包含常用网站链接和个人信息。 JS个人导航页|Ficklelyh|-Haloer的学习笔记|HookFix：另一个个人导航页面，包含个人项目、大数据、编程语言等多个分类。 Ficklelyh 还提供了 API 文档中心，帮助用户快速开启云服务。</p>
 </body>
 </html>
